[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerberus-django"
version = "0.1.0"
description = "Django middleware for capturing and streaming HTTP request metrics via WebSocket"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Griffin Potrock" }
]
keywords = [
    "django",
    "middleware",
    "metrics",
    "analytics",
    "monitoring",
    "websocket",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"
dependencies = [
    "django>=4.0",
    "websockets>=12.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-django>=4.5",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/gpotrock/cerberus"
Documentation = "https://github.com/gpotrock/cerberus#readme"
Repository = "https://github.com/gpotrock/cerberus.git"
Issues = "https://github.com/gpotrock/cerberus/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "CLAUDE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cerberus_django"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
asyncio_mode = "auto"
