[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerberus-core"
version = "0.1.1"
description = "Shared utilities for the Cerberus monitoring ecosystem"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Griffin Potrock" }
]
keywords = [
    "monitoring",
    "analytics",
    "sanitization",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/gpotrock/cerberus"
Repository = "https://github.com/gpotrock/cerberus.git"
Issues = "https://github.com/gpotrock/cerberus/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cerberus_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
